[gd_scene load_steps=6 format=1]

[ext_resource path="res://assets/scripts/battle_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/battle/cursor.png" type="Texture" id=2]
[ext_resource path="res://HelvetiPixel.fnt" type="BitmapFont" id=3]

[sub_resource type="GDScript" id=1]

script/source = "extends Sprite

onready var manager = get_parent()
var active = true

signal has_moved
signal has_clicked

func _ready():
	set_process_input(true)
	#emit_signal(\"has_moved\", self)
	pass

func _input(ev):
	if active:
		var terrain = manager.get_scene().get_terrain_collider()
		var pos = terrain.world_to_map(get_pos())
		var cellSize = terrain.get_cell_size()
		
		if ev.is_action_pressed(\"ui_right\"):
			if terrain.get_cellv(pos + Vector2(1, 0)) < 0:
				translate(Vector2(cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
		
		elif ev.is_action_pressed(\"ui_left\"):
			if terrain.get_cellv(pos - Vector2(1, 0)) < 0:
				translate(-Vector2(cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
	
		elif ev.is_action_pressed(\"ui_down\"):
			if terrain.get_cellv(pos + Vector2(0, 1)) < 0:
				translate(Vector2(-cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
	
		elif ev.is_action_pressed(\"ui_up\"):
			if terrain.get_cellv(pos - Vector2(0, 1)) < 0:
				translate(-Vector2(-cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
		
		elif ev.is_action_pressed(\"ui_accept\"):
			emit_signal(\"has_clicked\", self)
			get_tree().set_input_as_handled()

func activate(enable):
	print(\"Cursor state changed to \", enable, \".\")
	active = enable"

[sub_resource type="GDScript" id=2]

script/source = "extends Control

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass

func update_info(actor):
	get_node(\"name\").set_text(actor.name)
	
	#if it's an enemy, show its name red, otherwise, blue
	if actor.get_group() > 0:
		get_node(\"name\").set(\"custom_colors/font_color\", Color(1.0, 0.25, 0.25, 1.0))
	else:
		get_node(\"name\").set(\"custom_colors/font_color\", Color(0.25, 0.25, 1.0, 1.0))
		
	get_node(\"health/value\").set_text(str(actor.HP, \"/\", actor.maxHP))
	

func _on_battle_has_found_an_actor(actor):
	
	if actor == null:
		hide()
	else:
		update_info(actor)
		set_hidden(false)"

[node name="battle" type="Node"]

script/script = ExtResource( 1 )

[node name="cursor" type="Sprite" parent="."]

transform/pos = Vector2( 24, 56 )
z/z = -1
texture = ExtResource( 2 )
script/script = SubResource( 1 )

[node name="userInterface" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="BEBE" type="Control" parent="userInterface"]

anchor/top = 1
anchor/bottom = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 540.0
margin/right = 320.0
margin/bottom = 360.0
__meta__ = {
"_edit_lock_": true
}

[node name="actorInfo" type="Control" parent="userInterface/BEBE"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 159.0
margin/right = 43.0
margin/bottom = 199.0
script/script = SubResource( 2 )

[node name="name" type="Label" parent="userInterface/BEBE/actorInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = -9.0
margin/right = 42.0
margin/bottom = 5.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Guy"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health" type="Label" parent="userInterface/BEBE/actorInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 5.0
margin/right = 42.0
margin/bottom = 19.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="userInterface/BEBE/actorInfo/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 21.0
margin/top = 0.0
margin/right = 61.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "10/10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BBBB" type="Control" parent="userInterface"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 180.0
__meta__ = {
"_edit_lock_": true
}

[node name="turn" type="Label" parent="userInterface/BBBB"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 4.0
margin/right = 45.0
margin/bottom = 18.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Turn:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="EEEE" type="Control" parent="userInterface"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 180.0
__meta__ = {
"_edit_lock_": true
}

[node name="actions" type="Panel" parent="userInterface/EEEE"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 275.0
margin/top = 125.0
margin/right = 318.0
margin/bottom = 178.0

[node name="move" type="Label" parent="userInterface/EEEE/actions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 3.0
margin/right = 48.0
margin/bottom = 17.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Move"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="act" type="Label" parent="userInterface/EEEE/actions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 15.0
margin/right = 48.0
margin/bottom = 29.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Act"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="wait" type="Label" parent="userInterface/EEEE/actions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 27.0
margin/right = 48.0
margin/bottom = 41.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wait"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="status" type="Label" parent="userInterface/EEEE/actions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 39.0
margin/right = 48.0
margin/bottom = 53.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Status"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="userInterface/EEEE"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 260.0
margin/top = -124.0
margin/right = 409.0
margin/bottom = -92.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Blah Blah Blah Blah Blah! Bleh Bleh Bleh Bleh Bleh! Blih Blih Blih Blih Blih! Bloh Bloh Bloh Bloh Bloh! Bluh Bluh Bluh Bluh Bluh!"
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EBEB" type="Control" parent="userInterface"]

visibility/visible = false
anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 180.0

[node name="turn" type="Label" parent="userInterface/EBEB"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 115.0
margin/top = 2.0
margin/right = 318.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press W to show/hide scene colliders."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AI" type="Node" parent="."]

[connection signal="has_found_an_actor" from="." to="userInterface/BEBE/actorInfo" method="_on_battle_has_found_an_actor"]

[connection signal="has_clicked" from="cursor" to="." method="_on_cursor_has_clicked"]

[connection signal="has_moved" from="cursor" to="." method="_on_cursor_has_moved"]


